# rust-askama-axum-wasm-poc

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: main.rs
templates/: index.html
wasm/: Cargo.toml
wasm/src/: lib.rs
