[package]
name = "rust-askama-axum-wasm-poc"
version = "0.1.0"
edition = "2024"
authors = ["Erwin Acher <erwin.acher@gmail.com>"]
description = "Proof of concept for a Rust + Askama + Axum + WASM integration"
license = "MIT"
repository = "https://github.com/erwinacher/genai-wasm-poc"
readme = "README.md"
keywords = ["wasm", "axum", "poc"]
categories = ["web-programming", "wasm", "rust", "axum", "askama"]


[dependencies]
axum = "0.8.6"
tokio = { version = "1.4.8", features = ["full"] }
tower-http = { version = "0.6.4", features = ["fs", "set-header"] }
http = "1.3.1"
tower-layer = "0.3.3"
askama = "0.14.0"
